8182284: G1Analytics uses uninitialized fields

Reviewed-by: tschatzl, sjohanss